# GM-Assistant

./: .gitignore  .releaserc.yml  CHANGELOG.md  Dockerfile  GM Assistant.spec  Gemfile  README.md  alembic.ini  compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: build_executables.yaml  build_on_tag.yaml  ci.yml  deploy.yml  version_bump.yaml
app/channels/: PlayerDisplayChannel.rb
app/controllers/: AlbumsController.rb  CampaignsController.rb  FoldersController.rb  ImagesController.rb  PlayerController.rb  PlayerDisplaysController.rb  application_controller.rb  passwords_controller.rb  settings_controller.rb
app/helpers/: application_helper.rb  player_displays_helper.rb
app/mailers/: passwords_mailer.rb
app/models/: album.rb  campaign.rb  folder.rb  folder_tree.rb  image.rb  invite_code.rb  natural_name_sort.rb  player_display.rb  presentation_event.rb  user.rb
app/presenters/: folder_tree_presenter.rb
config/: application.rb  credentials.yml.enc  deploy.yml  routes.rb
config/environments/: development.rb  production.rb
config/initializers/: devise.rb
db/: manager.py  schema.rb  seeds.rb
db/migrate/: 20260323065150_create_campaigns.rb  20260323065413_create_folders.rb  20260323070156_create_albums.rb  20260323070313_create_images.rb  20260328000000_add_position_to_images.rb  20260331000000_create_player_displays.rb  (+9 more)
db/migrations/: env.py
dmt/: app.py
test/: test_helper.rb
tests/: conftest.py  db_fixtures.py  test.db  test_db.py  test_library_items.py  test_library_widget.py  test_music_widget.py  test_song_parse.py
(+200 files in other folders)
