[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "gm-assistant"
version = "1.0.0"
description = "A PySide6-based GM Assistant application"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Benjamin Colquhoun" }]

# --- Runtime dependencies ---
dependencies = [
  "alembic==1.16.5",
  "annotated-types==0.7.0",
  "attrs==25.3.0",
  "greenlet==3.2.4",
  "Mako==1.3.10",
  "MarkupSafe==3.0.2",
  "packaging==25.0",
  "pillow==11.3.0",
  "pydantic==2.11.7",
  "pydantic_core==2.33.2",
  "Pygments==2.19.2",
  "PySide6==6.9.2",
  "PySide6_Addons==6.9.2",
  "PySide6_Essentials==6.9.2",
  "referencing==0.36.2",
  "rpds-py==0.27.1",
  "shiboken6==6.9.2",
  "SQLAlchemy==2.0.43",
  "typing-inspection==0.4.1",
  "typing_extensions==4.15.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-qt==4.5.0",
  "pyinstaller>=6.16.0",
  "python-semantic-release>=10.4.1"
]

# ---- Semantic versioning setup
[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
changelog_file = "CHANGELOG.md"
build_command = ""
remote.type = "github"

# ---- Packaging ----
[tool.setuptools]
packages = ["dmt"]

# ---- Include package data ----
[tool.setuptools.package-data]
dmt = [
  "db/migrations/**/*.py",
  "db/migrations/**/*.mako",
  "db/migrations/**/*.sql",
  "db/migrations/script.py.mako",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
